# xAODAnaHelpers

./: .buildinfo  .bumpversion.cfg  .gitignore  .jenkins.yml  .readthedocs.yaml  .travis.yml  .zenodo.json  API.html  Algorithms.html  BJetEfficiencyCorrector.html  BasicEventSelection.html  CMakeLists.txt  CONTRIBUTING.md  Calibrators.html  ChangeLog  ClusterHists.html  ClusterHistsAlgo.html  Community.html  Correctors.html  DebugTool.html  Development.html  Dockerfile  ElectronCalibrator.html  ElectronEfficiencyCorrector.html  ElectronSelector.html  FAQs.html  Getters.html  HLTJetGetter.html  HelpTreeBase.html  HelperClasses.html  HelperFunctions.html  Histograms.html  HowToDocumentation.html  Installing.html  Intro.html  Issues.html  JetCalibrator.html  JetHists.html  JetHistsAlgo.html  JetSelector.html  (+45 more)
Root/: #MuonEfficiencyCorrector.cxx#  Algorithm.cxx  AnalysisLoop.cxx  BJetEfficiencyCorrector.cxx  BJetSelector.cxx  BasicEventSelection.cxx  ClusterContainer.cxx  ClusterHists.cxx  ClusterHistsAlgo.cxx  ContainerRecording.cxx  DebugTool.cxx  ElectronCalibrator.cxx  ElectronContainer.cxx  ElectronEfficiencyCorrector.cxx  ElectronHists.cxx  ElectronHistsAlgo.cxx  ElectronSelector.cxx  EventInfo.cxx  FatJetContainer.cxx  HLTJetGetter.cxx  HLTJetRoIBuilder.cxx  HelpTreeBase.cxx  HelperClasses.cxx  HelperFunctions.cxx  HistogramManager.cxx  IParticleHists.cxx  IParticleHistsAlgo.cxx  IsoCloseByCorr.cxx  JERShifter.cxx  Jet.cxx  JetCalibrator.cxx  JetContainer.cxx  JetHists.cxx  JetHistsAlgo.cxx  JetPlots.cxx  JetPlotsClass.cxx  JetSelector.cxx  JetTriggerEfficiencies.cxx  L1JetContainer.cxx  LinkDef.h  (+52 more)
_sources/: API.rst.txt  Algorithms.rst.txt  BJetEfficiencyCorrector.rst.txt  ClusterHists.rst.txt  ClusterHistsAlgo.rst.txt  DebugTool.rst.txt  Development.rst.txt  ElectronCalibrator.rst.txt  ElectronEfficiencyCorrector.rst.txt  FAQs.rst.txt  Getters.rst.txt  HelpTreeBase.rst.txt  HelperFunctions.rst.txt  Histograms.rst.txt  HowToDocumentation.rst.txt  Installing.rst.txt  Intro.rst.txt  Issues.rst.txt  JetHistsAlgo.rst.txt  JetSelector.rst.txt  METConstructor.rst.txt  MessagePrinterAlgo.rst.txt  MetHists.rst.txt  MetHistsAlgo.rst.txt  MinixAOD.rst.txt  MuonCalibrator.rst.txt  MuonEfficiencyCorrector.rst.txt  MuonHistsAlgo.rst.txt  MuonInFatJetCorrector.rst.txt  Outputs.rst.txt  OverlapRemover.rst.txt  TauCalibrator.rst.txt  TauJetMatching.rst.txt  ToolsUsed.rst.txt  TrackHists.rst.txt  TrackHistsAlgo.rst.txt  TruthSelector.rst.txt  Tutorial_BrianTuan.rst.txt  Utilities.rst.txt  VtxHists.rst.txt  (+2 more)
_static/: documentation_options.js
api/: classBJetEfficiencyCorrector.html  classBasicEventSelection.html  classClusterHistsAlgo.html  classDebugTool.html  classElectronCalibrator.html  classElectronCutBasedPIDManager.html  classElectronEfficiencyCorrector.html  classElectronHistsAlgo.html  classElectronSelector.html  classHLTJetGetter.html  classHelpTreeBase.html  classHelperClasses_1_1ClusterInfoSwitch.html  classHelperClasses_1_1ElectronInfoSwitch.html  classHelperClasses_1_1EnumParser.html  classHelperClasses_1_1EventInfoSwitch.html  classHelperClasses_1_1IParticleInfoSwitch.html  classHelperClasses_1_1InfoSwitch.html  classHelperClasses_1_1JetInfoSwitch.html  classHelperClasses_1_1METInfoSwitch.html  classHelperClasses_1_1MuonInfoSwitch.html  classHelperClasses_1_1PhotonInfoSwitch.html  classHelperClasses_1_1TauInfoSwitch.html  classHelperClasses_1_1TrackInfoSwitch.html  classHelperClasses_1_1TriggerInfoSwitch.html  classHelperClasses_1_1TruthInfoSwitch.html  classHistogramManager.html  classIParticleHistsAlgo.html  classIsoCloseByCorr.html  classJetCalibrator.html  classJetHistsAlgo.html  classJetSelector.html  classMETConstructor.html  classMessagePrinterAlgo.html  classMetHists.html  classMetHistsAlgo.html  classMinixAOD.html  classMuonCalibrator.html  classMuonEfficiencyCorrector.html  classMuonHistsAlgo.html  classMuonInFatJetCorrector.html  (+466 more)
ci/: .rpmmacros  Dockerfile  compile.sh  deploy.sh  docker_analysis_setup.sh  motd  parse_infoswitches.py  run.sh  top_CMakeLists.txt  uncrustify.cfg  xAODAnaHelpers_setup.sh
cmake/: SetupPythonPackage.cmake  patch-setup.cfg  pkgbuildInstall.cmake.in  setup.sh
cmt/: Makefile.RootCore
data/: 2015-PreRecomm-13TeV-MC12-CDI-May19-v1.root  2015-PreRecomm-13TeV-MC12-CDI-October23_v1.root  2015-PreRecomm-13TeV-MC12-CDI_August3-v1.root  2016-20_7-13TeV-MC15-CDI-May31_v1.root  2016-Winter-13TeV-MC15-CDI-February14_v2.root  2016-Winter-13TeV-MC15-CDI-February5_prov.root  2016-Winter-13TeV-MC15-CDI-January13_v1.root  DSIDtoGenerator.txt  ElectronEfficiencyCorrection.diff  ElectronEfficiencyCorrection_Base.2.1.27.diff  ElectronEfficiencyCorrection_Base.2.1.28.diff  ElectronEfficiencyCorrection_Base.2.1.29.diff  ElectronEfficiencyCorrection_Base.2.1.30.diff  ElectronEfficiencyCorrection_Base.2.1.31.diff  ElectronEfficiencyCorrection_Base.2.1.32.diff  JZ_QStar_PRW.root  MET_MC15.config  baseEvent.config  bjetEffCorr.config  bjetSelect_signal.config  data12_8TeV.periodAllYear_DetStatus-v61-pro14-02_DQDefects-00-01-00_PHYS_StandardGRL_All_Good.xml  data15_13TeV.periodA+B1_DetStatus-v62-pro18_DQDefects-00-01-02_PHYS_StandardGRL_All_Good.xml  data15_13TeV.periodA1_DetStatus-v62-pro17_DQDefects-00-01-02_PHYS_CombinedPerf_Tracking_Tracking.xml  data15_13TeV.periodAllYear_DetStatus-v62-pro18-01_DQDefects-00-01-02_PHYS_StandardGRL_All_Good.xml  data15_13TeV.periodAllYear_DetStatus-v63-pro18-01_DQDefects-00-01-02_PHYS_StandardGRL_All_Good.xml  electronCalib.config  electronEffCorr.config  electronSelect_signal.config  jetCalib_AntiKt4TopoEMCalib.config  jetHistsAlgo_all.config  jetHistsAlgo_btagged.config  jetHistsAlgo_signal.config  jetPlots_all.config  jetPlots_signal.config  jetSelect_signal.config  jetSelect_truth.config  muonCalib.config  muonEffCorr.config  muonSelect_signal.config  overlapRemoval.config  (+6 more)
docs/: .gitignore  API.rst  Algorithms.rst  BasicEventSelection.rst  Calibrators.rst  ClusterHistsAlgo.rst  Community.rst  Correctors.rst  Development.rst  Doxyfile  ElectronSelector.rst  FAQs.rst  Getters.rst  Getting-Started.rst  HLTJetGetter.rst  (+34 more)
(+745 files in other folders)
